<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JsonActivity">

    <TextView
        android:id="@+id/textWebsite"
        android:layout_width="127dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/website"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhone" />

    <TextView
        android:id="@+id/textWebsiteValue"
        android:layout_width="171dp"
        android:layout_height="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/website_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toEndOf="@+id/textPhone"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneValue" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <TextView
        android:id="@+id/textUsernameValue"
        android:layout_width="177dp"
        android:layout_height="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/username_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/textUsername"
        app:layout_constraintTop_toBottomOf="@+id/textEmailValue" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <TextView
        android:id="@+id/textEmailValue"
        android:layout_width="179dp"
        android:layout_height="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/email_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@+id/textNameValue" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/nameValue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textNameValue"
        android:layout_width="182dp"
        android:layout_height="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/name_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="127dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/phone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername" />

    <TextView
        android:id="@+id/textPhoneValue"
        android:layout_width="171dp"
        android:layout_height="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/phone_value"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toEndOf="@+id/textPhone"
        app:layout_constraintTop_toBottomOf="@+id/textUsernameValue" />


</androidx.constraintlayout.widget.ConstraintLayout>